--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@
 
 
 # Site settings
-title: material
+title: Umitems
 linkedin: https://th.linkedin.com/in/umanusorn
 description: > # this means to ignore newlines until "baseurl:"
   Hello, I'm Um Anusornpakdee, a freelance Android developer
